--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <title>벽돌깨기 게임</title>
     <style>
-        canvas { 
-            border: 1px solid black; 
-            display: block;
-            margin: 0 auto;
-        }
+        canvas { border: 1px solid black; display: block; margin: 0 auto; }
     </style>
 </head>
 <body>
@@ -39,11 +35,12 @@
     var brickOffsetLeft = 30;
 
     var score = 0;
+    var lives = 3;
 
     var bricks = [];
-    for(var c=0; c<brickColumnCount; c++) {
+    for (var c = 0; c < brickColumnCount; c++) {
         bricks[c] = [];
-        for(var r=0; r<brickRowCount; r++) {
+        for (var r = 0; r < brickRowCount; r++) {
             bricks[c][r] = { x: 0, y: 0, status: 1 };
         }
     }
@@ -53,40 +50,30 @@
     document.addEventListener("mousemove", mouseMoveHandler);
 
     function keyDownHandler(e) {
-        if(e.key == "Right" || e.key == "ArrowRight") {
-            rightPressed = true;
-        }
-        else if(e.key == "Left" || e.key == "ArrowLeft") {
-            leftPressed = true;
-        }
+        if (e.key == "Right" || e.key == "ArrowRight") rightPressed = true;
+        else if (e.key == "Left" || e.key == "ArrowLeft") leftPressed = true;
     }
-
     function keyUpHandler(e) {
-        if(e.key == "Right" || e.key == "ArrowRight") {
-            rightPressed = false;
-        }
-        else if(e.key == "Left" || e.key == "ArrowLeft") {
-            leftPressed = false;
-        }
+        if (e.key == "Right" || e.key == "ArrowRight") rightPressed = false;
+        else if (e.key == "Left" || e.key == "ArrowLeft") leftPressed = false;
     }
-
     function mouseMoveHandler(e) {
         var relativeX = e.clientX - canvas.offsetLeft;
-        if(relativeX > 0 && relativeX < canvas.width) {
+        if (relativeX > 0 && relativeX < canvas.width) {
             paddleX = relativeX - paddleWidth / 2;
         }
     }
 
     function collisionDetection() {
-        for(var c=0; c<brickColumnCount; c++) {
-            for(var r=0; r<brickRowCount; r++) {
+        for (var c = 0; c < brickColumnCount; c++) {
+            for (var r = 0; r < brickRowCount; r++) {
                 var b = bricks[c][r];
-                if(b.status == 1) {
-                    if(x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
+                if (b.status == 1) {
+                    if (x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
                         dy = -dy;
                         b.status = 0;
                         score++;
-                        if(score == brickRowCount * brickColumnCount) {
+                        if (score == brickRowCount * brickColumnCount) {
                             alert("승리!");
                             document.location.reload();
                         }
@@ -98,7 +85,7 @@
 
     function drawBall() {
         ctx.beginPath();
-        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+        ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
         ctx.fillStyle = "#0095DD";
         ctx.fill();
         ctx.closePath();
@@ -113,16 +100,17 @@
     }
 
     function drawBricks() {
-        for(var c=0; c<brickColumnCount; c++) {
-            for(var r=0; r<brickRowCount; r++) {
-                if(bricks[c][r].status == 1) {
-                    var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
-                    var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
+        var colors = ["#0095DD", "#FF5733", "#33FF57", "#FF33A1", "#8E44AD"];
+        for (var c = 0; c < brickColumnCount; c++) {
+            for (var r = 0; r < brickRowCount; r++) {
+                if (bricks[c][r].status == 1) {
+                    var brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
+                    var brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
                     bricks[c][r].x = brickX;
                     bricks[c][r].y = brickY;
                     ctx.beginPath();
                     ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                    ctx.fillStyle = "#0095DD";
+                    ctx.fillStyle = colors[(r + c) % colors.length];
                     ctx.fill();
                     ctx.closePath();
                 }
@@ -133,7 +121,13 @@
     function drawScore() {
         ctx.font = "16px Arial";
         ctx.fillStyle = "#0095DD";
-        ctx.fillText("Score: "+score, 8, 20);
+        ctx.fillText("Score: " + score, 8, 20);
+    }
+
+    function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Lives: " + lives, canvas.width - 65, 20);
     }
 
     function draw() {
@@ -142,28 +136,35 @@
         drawBall();
         drawPaddle();
         drawScore();
+        drawLives();
         collisionDetection();
 
-        if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+        if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
             dx = -dx;
         }
-        if(y + dy < ballRadius) {
+        if (y + dy < ballRadius) {
             dy = -dy;
-        }
-        else if(y + dy > canvas.height - ballRadius) {
-            if(x > paddleX && x < paddleX + paddleWidth) {
+        } else if (y + dy > canvas.height - ballRadius) {
+            if (x > paddleX && x < paddleX + paddleWidth) {
                 dy = -dy;
-            }
-            else {
-                alert("게임 오버!");
-                document.location.reload();
+            } else {
+                lives--;
+                if (lives > 0) {
+                    x = canvas.width / 2;
+                    y = canvas.height - 30;
+                    dx = 2;
+                    dy = -2;
+                    paddleX = (canvas.width - paddleWidth) / 2;
+                } else {
+                    alert("게임 오버!");
+                    document.location.reload();
+                }
             }
         }
 
-        if(rightPressed && paddleX < canvas.width - paddleWidth) {
+        if (rightPressed && paddleX < canvas.width - paddleWidth) {
             paddleX += 7;
-        }
-        else if(leftPressed && paddleX > 0) {
+        } else if (leftPressed && paddleX > 0) {
             paddleX -= 7;
         }
 
